--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
           <img class="pc" src="img/main/main-1.JPG" alt="講習の様子">
           <img class="sp" src="img/main/main-6.jpg" alt="講習の様子">
         </div>
-        <h3><span style="color: crimson;">「挑戦」</span>から生まれる<br crass="sma"><span style="color: dodgerblue;">「感情」</span>をみんなに！</h3>
+        <h3><span style="color: crimson;">「挑戦」</span>から生まれる<br class="sma"><span style="color: dodgerblue;">「感情」</span>をみんなに！</h3>
         <ul class="about-kincube">
           <li>2022/07/14 設立</li>
-          <li>ルービックキューブや学校の勉強などを<br crass="sma">教えています！</li>
-          <li>夢は、みんなが楽しく好きなことを<br crass="sma">自由に学べる場所！</li>
+          <li>ルービックキューブや学校の勉強などを<br class="sma">教えています！</li>
+          <li>夢は、みんなが楽しく好きなことを<br class="sma">自由に学べる場所！</li>
         </ul>
       </div>
     </div>
